--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -28,7 +28,11 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm i
-    - run: npm run build --if-present
     - run: npm run test:cov
-    - name: Test Coverage report
-      uses: mattallty/jest-github-action@v1
+    - name: Comment Test Coverage
+      uses: AthleticNet/comment-test-coverage@1.1
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        path: coverage/coverage-summary.json
+        title: Karma Test Coverage
+    - run: npm run build --if-present
